# glitter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
data/meshes/: teapot.glb
data/shaders/: FragShader.glsl  MainFS.glsl  MainVS.glsl  VertexShader.glsl
data/shaders/debug/: DebugFS.glsl  DebugVS.glsl
data/shaders/ppfx/: PpfxFS.glsl  PpfxVS.glsl
data/textures/: README.txt
src/: main.cpp
src/glitter/: Config.h  ImGuiConfig.h
src/glitter/util/: File.cpp  File.h
